--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,24 @@
 .app {
   height: 100vh;
   width: 100%;
-  background-color: #2c2f33;
+}
+
+/* Common elements */
+.btn {
+  all: initial;
+  cursor: pointer;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 2px solid #4142ee;
+  font-size: 18px;
+  border-radius: 5px;
+  color: black;
+  background-color: transparent;
+  transition: all 0.14s linear;
+}
+.btn:hover {
+  border-color: white;
+  background-color: #4142ee;
+  color: aliceblue;
 }
