--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -5,6 +5,8 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .navbar__left {
   flex: 1;
@@ -30,9 +32,12 @@
   height: 100%;
 }
 .navbar__left__heading__title {
+  all: initial;
+  cursor: pointer;
   font-size: 26px;
   font-family: roboto;
   margin-left: 10px;
+  font-weight: 700;
   font-family: inherit;
 }
 .navbar__left__options {
@@ -64,6 +69,7 @@
   align-items: center;
   margin-left: 20px;
   margin-right: 40px;
+  height: 50px;
 }
 .navbar__search__form {
   display: flex;
@@ -83,58 +89,46 @@
 }
 .navbar__search__field:focus {
   width: 350px;
+  background-color: white;
+}
+.navbar__search__button {
+  border-color: grey;
+}
+.navbar__search__button:hover {
+  background-color: transparent;
 }
 .navbar__right__user__cont {
+  margin-right: 20px;
+  height: 40px;
+  position: relative;
+}
+.navbar__right__user__cont img {
   width: 35px;
   height: 35px;
   border-radius: 100px;
-  overflow: hidden;
-  margin-right: 20px;
 }
-.navbar__right__user__cont img {
-  width: 100%;
-  height: 100%;
-}
-.navbar__theme__toggler {
-  display: flex;
-  align-items: center;
-}
-#theme__toggler {
+.navbar__user__options {
+  position: absolute;
+  width: 100px;
+  right: 0;
+  background-color: white;
+  box-shadow: 0px 3px 10px black;
+  padding: 10px;
+  border-radius: 5px;
   display: none;
+  opacity: 0;
+  transition: all 3s linear;
 }
-.theme__toggler__bg {
-  width: 50px;
-  height: 30px;
-  border-radius: 15px;
-  background-color: white;
-  transition: all 0.2s linear;
+.navbar__user__option {
+  all: initial;
+  border-bottom: 1px solid grey;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+  font-family: "Akaya Kanadaka", cursive;
 }
-#theme__toggler:checked ~ .theme__toggler__bg {
-  background-color: black;
-}
-.theme__toggler__image {
-  color: #000;
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background-color: currentColor;
+.navbar__right__user__cont:hover .navbar__user__options {
   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.theme__toggler__image::before {
-  content: "";
-  position: absolute;
-  left: 6px;
-  top: 1px;
-  width: 18px;
-  height: 18px;
-  border-radius: 50%;
-  border-top: solid 1px transparent;
-  border-bottom: solid 1px currentColor;
-  border-left: solid 1px currentColor;
-  border-right: solid 1px transparent;
-  transform: rotate(45deg);
-  background-color: white;
+  flex-direction: column;
+  opacity: 1;
 }
