--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -46,6 +46,8 @@
   align-items: center;
 }
 .navbar__left__option {
+  all: initial;
+  font-family: "Akaya Kanadaka", cursive;
   flex: 1;
   font-size: 22px;
   margin-right: 20px;
