--- a/src/css/routes/home.css
+++ b/src/css/routes/home.css
@@ -17,7 +17,6 @@ body {
   padding: 40px;
   padding-left: 80px;
   padding-right: 80px;
-  transform-style: preserve-3d;
 }
 .home__first {
   display: flex;
@@ -38,7 +37,6 @@ body {
 }
 .home__first__left__card__heading,
 .home__second__right__heading {
-  transform: translateZ(100px);
   font-size: 1.7rem;
 }
 .home__first__left__card__details,
@@ -125,6 +123,13 @@ body {
   margin-top: 10px;
 }
 .home__second__degreecap {
+  width: 200px;
+  height: 200px;
+}
+.home__second__left {
+  width: auto;
+}
+.home__second__knowledge {
   width: 200px;
   height: 200px;
 }
