--- a/src/css/routes/Explore.css
+++ b/src/css/routes/Explore.css
@@ -4,7 +4,8 @@
   position: relative;
   width: 100%;
   min-height: 90vh;
-  background-image: url(../../Images/Svgs/background.svg);
+  background-image: linear-gradient(to bottom, #ffa50044, transparent);
+  z-index: -1;
 }
 .explore__self {
   width: 300px;
@@ -12,12 +13,9 @@
 }
 .explore__self__cont {
   height: 100%;
-  border: 2px solid red;
   border-radius: 20px;
   overflow-x: hidden;
-  overflow-y: scroll;
   scrollbar-width: none;
-  backdrop-filter: blur(40px);
 }
 .explore__main {
   flex: 1;
